Add another exercises I've been working on

--- a/code_camp_practice.ipynb
+++ b/code_camp_practice.ipynb
@@ -46,43 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "character: H original space: 7 shifted: 10 new character: nk\n",
-      "character: e original space: 4 shifted: 7 new character: nkh\n",
-      "character: l original space: 11 shifted: 14 new character: nkho\n",
-      "character: l original space: 11 shifted: 14 new character: nkhoo\n",
-      "character: o original space: 14 shifted: 17 new character: nkhoor\n",
-      "character:   original space: -1 shifted: 2 new character: nkhoorc\n",
-      "character: p original space: 15 shifted: 18 new character: nkhoorcs\n",
-      "character: a original space: 0 shifted: 3 new character: nkhoorcsd\n",
-      "character: n original space: 13 shifted: 16 new character: nkhoorcsdq\n",
-      "character: c original space: 2 shifted: 5 new character: nkhoorcsdqf\n",
-      "character: a original space: 0 shifted: 3 new character: nkhoorcsdqfd\n",
-      "character: k original space: 10 shifted: 13 new character: nkhoorcsdqfdn\n",
-      "character: e original space: 4 shifted: 7 new character: nkhoorcsdqfdnh\n",
-      "character: s original space: 18 shifted: 21 new character: nkhoorcsdqfdnhv\n",
-      "character:   original space: -1 shifted: 2 new character: nkhoorcsdqfdnhvc\n",
-      "character: I original space: 8 shifted: 11 new character: nkhoorcsdqfdnhvcl\n",
-      "character: m original space: 12 shifted: 15 new character: nkhoorcsdqfdnhvclp\n",
-      "character:   original space: -1 shifted: 2 new character: nkhoorcsdqfdnhvclpc\n",
-      "character: b original space: 1 shifted: 4 new character: nkhoorcsdqfdnhvclpce\n",
-      "character: a original space: 0 shifted: 3 new character: nkhoorcsdqfdnhvclpced\n",
-      "character: c original space: 2 shifted: 5 new character: nkhoorcsdqfdnhvclpcedf\n",
-      "character: k original space: 10 shifted: 13 new character: nkhoorcsdqfdnhvclpcedfn\n",
-      "\n"
+      "character: H original space: 7 shifted: 10 new character: k\n",
+      "character: e original space: 4 shifted: 7 new character: h\n",
+      "character: l original space: 11 shifted: 14 new character: o\n",
+      "character: l original space: 11 shifted: 14 new character: o\n",
+      "character: o original space: 14 shifted: 17 new character: r\n",
+      "character: p original space: 15 shifted: 18 new character: s\n",
+      "character: a original space: 0 shifted: 3 new character: d\n",
+      "character: n original space: 13 shifted: 16 new character: q\n",
+      "character: c original space: 2 shifted: 5 new character: f\n",
+      "character: a original space: 0 shifted: 3 new character: d\n",
+      "character: k original space: 10 shifted: 13 new character: n\n",
+      "character: e original space: 4 shifted: 7 new character: h\n",
+      "character: s original space: 18 shifted: 21 new character: v\n",
+      "character: I original space: 8 shifted: 11 new character: l\n",
+      "character: ' original space: 26 shifted: 2 new character: c\n",
+      "character: m original space: 12 shifted: 15 new character: p\n",
+      "character: b original space: 1 shifted: 4 new character: e\n",
+      "character: a original space: 0 shifted: 3 new character: d\n",
+      "character: c original space: 2 shifted: 5 new character: f\n",
+      "character: k original space: 10 shifted: 13 new character: n\n",
+      "whoot\n",
+      "khoor sdqfdnhv lcp edfn\n"
      ]
     }
    ],
    "source": [
-    "alphabet = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "alphabet = 'abcdefghijklmnopqrstuvwxyz\\''\n",
     "shift = 3\n",
-    "phrase = 'Hello pancakes Im back'\n",
+    "phrase = \"Hello pancakes I'm back\"\n",
     "# find each letter of the phrase and give back the number in the alphabet\n",
     "# increase the letter number by shift spaces and save in shifted\n",
     "# find the letter in the space shifted in the alphabet\n",
@@ -90,14 +89,105 @@
     "# save the new phrase\n",
     "new_phrase = ''\n",
     "for letter in phrase:\n",
+    "\n",
     "    space = alphabet.find(letter.lower())\n",
-    "    shifted = space + shift\n",
-    "    # here comes the fun part,\n",
-    "    new_letter += alphabet[shifted]\n",
-    "    print('character:', letter, 'original space:', space,\n",
-    "          'shifted:', shifted, 'new character:', new_letter)\n",
+    "    if space == -1:\n",
+    "        new_phrase += \" \"\n",
+    "    else:\n",
+    "        shifted = (space + shift) % len(alphabet)\n",
+    "        # here comes the fun part, we have to manage spaces and z\n",
+    "        new_letter = alphabet[shifted]\n",
+    "        new_phrase += new_letter\n",
+    "        print('character:', letter, 'original space:', space,\n",
+    "              'shifted:', shifted, 'new character:', new_letter)\n",
     "print('whoot')\n",
     "print(new_phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# some Strings\n",
+    "a = int(input(\"type a number\"))\n",
+    "b = int(input(\"type a number\"))\n",
+    "z = a + b\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello pancakes I'm back\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(phrase)\n",
+    "phrase.find(\"o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vigenere(message, keyword):\n",
+    "    decyphered = \"\"\n",
+    "    for char in message:\n",
+    "        if char == \" \":\n",
+    "            decyphered += \" \"\n",
+    "        else:\n",
+    "            #look up the char in the keyword save in keyword place\n",
+    "            #if -1, look up on the alphabet\n",
+    "            #else look for that word in the alphabet\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(alphabet)"
    ]
   }
  ],
