--- a/pruebas_jupyter.ipynb
+++ b/pruebas_jupyter.ipynb
@@ -86,6 +86,92 @@
     "    my_dictionary[pet] = i\n",
     "print(my_dictionary)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even [0, 2, 4, 6, 8, 10]\n",
+      "odd [1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# odd numbers\n",
+    "number_list_two = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print(\"even\", number_list_two[::2])\n",
+    "print(\"odd\", number_list_two[1::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string\n",
+      "g\n",
+      "gnirts\n"
+     ]
+    }
+   ],
+   "source": [
+    "this_string = \"string\"\n",
+    "print(this_string)\n",
+    "last_element = this_string[-1]\n",
+    "print(last_element)\n",
+    "this_string_reversed = this_string[::-1]\n",
+    "print(this_string_reversed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type a number\n",
+      "type a number\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'division' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype a number\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthe result is:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mdivision\u001b[49m(num1, num2))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivision\u001b[39m(numerador, denominador):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'division' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"type a number\")\n",
+    "num1 = input()\n",
+    "print(\"type a number\")\n",
+    "num2 = input()\n",
+    "print(\"the result is:\", division(num1, num2))\n",
+    "\n",
+    "\n",
+    "def division(numerador, denominador):\n",
+    "    try:\n",
+    "        total = numerador / denominador\n",
+    "    except NameError:\n",
+    "        print(\"Division by Zero is Not defined\")\n",
+    "    return total"
+   ]
   }
  ],
  "metadata": {
@@ -104,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
