Add the expenses.py excercise and other files

--- a/pruebas_jupyter.ipynb
+++ b/pruebas_jupyter.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,19 +158,204 @@
     }
    ],
    "source": [
-    "print(\"type a number\")\n",
-    "num1 = input()\n",
-    "print(\"type a number\")\n",
-    "num2 = input()\n",
-    "print(\"the result is:\", division(num1, num2))\n",
-    "\n",
-    "\n",
     "def division(numerador, denominador):\n",
     "    try:\n",
     "        total = numerador / denominador\n",
     "    except NameError:\n",
     "        print(\"Division by Zero is Not defined\")\n",
-    "    return total"
+    "    return total\n",
+    "print(\"type a number\")\n",
+    "num1 = input()\n",
+    "print(\"type a number\")\n",
+    "num2 = input()\n",
+    "print(\"the result is:\", division(num1, num2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ended because it is not a character\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    usr_input = input(\"type a character: \")\n",
+    "    if not usr_input.isalpha():\n",
+    "        break\n",
+    "    else:\n",
+    "        print(usr_input)\n",
+    "print(\"Ended because it is not a character\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 1, 2, 3, 4]\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"lambda function\"\n",
+    "def lam_test(z): return z*2\n",
+    "\n",
+    "\n",
+    "print(lam_test([1, 2, 3, 4]))\n",
+    "print(lam_test(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HellO_this_is_a_string_Or_sOmething,_maybe_anOther\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''maketrans'''\n",
+    "my_strint = \"Hello this is a string or something, maybe another\"\n",
+    "trans_table = str.maketrans({\" \": \"_\", \"o\": \"O\"})\n",
+    "print(my_strint.translate(trans_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n",
+      "five\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_iterator = iter(number_list)\n",
+    "print(next(my_iterator))\n",
+    "print(next(my_iterator))\n",
+    "print(next(my_iterator))\n",
+    "print(next(my_iterator))\n",
+    "print(next(my_iterator))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'amount': 50, 'category': 'food'}, {'amount': 20, 'category': 'food'}]\n",
+      "-----------------\n",
+      "{'amount': 50, 'category': 'food'}\n",
+      "50\n",
+      "--------------\n",
+      "[{'amount': 50, 'category': 'food'}, {'amount': 20, 'category': 'supplies'}, {'amount': 20, 'category': 'food'}]\n",
+      "amount category\n",
+      "amount category\n",
+      "amount category\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"building a iterator\"\"\"\n",
+    "expenses = [{\"amount\": 50, \"category\": \"food\"},\n",
+    "            {\"amount\": 20,\n",
+    "             \"category\": \"supplies\"}, {\"amount\": 20, \"category\": \"food\"}]\n",
+    "\n",
+    "\n",
+    "def filter_by_category(expenses, category):\n",
+    "    return filter(lambda expense: expense[\"category\"] == category, expenses)\n",
+    "\n",
+    "\n",
+    "filtered_expenses = filter_by_category(expenses, \"food\")\n",
+    "\n",
+    "print(list(filtered_expenses))\n",
+    "print(\"-----------------\")\n",
+    "print(expenses[0])\n",
+    "print(expenses[0][\"amount\"])\n",
+    "print('--------------')\n",
+    "print(expenses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'c', 'd', 'f', 'l', 'o', 's', 'w', 'y', 'z']\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_other_string = \"fsdloywzca\"\n",
+    "print(sorted(some_other_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4634999424\n",
+      "___________________\n",
+      "[{'amount': 50, 'category': 'food'}, {'amount': 20, 'category': 'supplies'}, {'amount': 20, 'category': 'food'}]\n",
+      "4634987136\n",
+      "------------------\n",
+      "[{'amount': 50, 'category': 'food'}, {'amount': 20, 'category': 'supplies'}, {'amount': 20, 'category': 'food'}]\n",
+      "4634990528\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"now lets try to copy some lists\"\"\"\n",
+    "\"\"\"theres two ways to go about it\n",
+    "one is importing copy and the other is making a slice\"\"\"\n",
+    "import copy\n",
+    "print(id(expenses))\n",
+    "print(\"___________________\")\n",
+    "new_list = copy.copy(expenses)\n",
+    "print(new_list)\n",
+    "print(id(new_list))\n",
+    "print(\"------------------\")\n",
+    "new_second_list = expenses[:]\n",
+    "print(new_second_list)\n",
+    "print(id(new_second_list))"
    ]
   }
  ],
